PLAT-782: added min-height to stop banners without imgs from collapsing

--- a/cr/themes/custom/campaign_base/sass/components/banners/_card-banner.scss
+++ b/cr/themes/custom/campaign_base/sass/components/banners/_card-banner.scss
@@ -12,6 +12,7 @@
 	margin: 0 auto;
 	overflow: hidden;
 	position: relative;
+	min-height: 95px;
 }
 .card-banner__image {
 	display: none;
